<resources>
    <string name="app_name">CookTime</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="register_failed">Registering failed due to connection error or a mail address has been used already.</string>
    <string name="map_location">MapLocation</string>
    <string name="title_detail_fragment">Details</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="setting">Setting</string>


    <string name="db_fail_login">Password or username is/are wrong.</string>
    <string name="user_exists_already">User exists already.</string>
    <string name="db_fail_retrieval">"DB error. Somehow can not retrieve user."</string>
    <string name="error_registering">Error registering</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_desc">Professional LoL player also passionate cooker.</string>
    <string name="user_name">Tim Lemon</string>
    <string name="dish_desc">Classical carbonara made with Pecorino cheese, Guanciale, Egg and Pepper served with Spaghettoni</string>
    <string name="quantity_input_hint">Quantity</string>
    <string name="order_continue">Continue with the order</string>
    <string name="dish_quantity_left">"%d %s"</string>
    <string name="dish_price_euro">"%.2f Eur"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="map">Map</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>