<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:summary="Your signature"
            app:useSimpleSummaryProvider="false"
            app:dialogTitle="Digital Signature"
            app:dialogMessage="Enter your digital signature hash"
            app:iconSpaceReserved="true"
            app:icon="@drawable/ic_baseline_ac_unit_24"/>

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:fragment="com.hungames.cookingsocial.settings.UserSettingFragment"
            app:key="user_profile"
            app:title="User Account"
            app:icon="@drawable/ic_baseline_supervised_user_circle_24"
        />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>