<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hungames.cookingsocial.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.hungames.cookingsocial.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.hungames.cookingsocial.ui.map.MapsFragment"
        android:label="@string/map_location"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.hungames.cookingsocial.settings.SettingsFragment"
        android:label="Settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_user_settings"
            app:destination="@id/navigation_user_settings" />
    </fragment>
    <fragment
        android:id="@+id/navigation_user_settings"
        android:name="com.hungames.cookingsocial.settings.UserSettingFragment"
        android:label="User Profile" />
</navigation>